new approach to functional tests; moved index/reindex/unindex tests into functional tests; made Compass and CompassGps beans disposable in the Spring sense; moved to standard "Config.groovy" style configuration and deprecated older custom SearchableConfiguration.groovy file
git-svn-id: https://svn.codehaus.org/grails-plugins/grails-searchable/trunk@44144 832c1c66-4827-0410-8465-ccb17913cd09